# Brain_Tumor_Team_Projekt4

./: .gitignore  MYU_Net (1).ipynb  README.md  main.py  pyproject.toml
project/: analiza_danych.ipynb  moj2_model.ipynb  moj_mode.ipynb
